<resources>
    <string name="app_name">labsinfo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="cancel">Cancel</string>
    <string name="attempts_left">Attempts Left:</string>
    <string name="enter_name">Enter Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tutorials_point">Tutorials point</string>
    <string name="developer">Developer</string>
    <string name="logout">Log out</string>
    <string name="copyright2017">\@Copyright 2017</string>
    <string name="nokobin">Nokobin</string>
    <string name="about_me">About Me</string>
    <string name="jurusan_sistem_informasi">: Sistem Informasi</string>
    <string name="npm_16113037">: 16113037</string>
    <string name="nama_muhammad_muqorrobin">: Muhammad Muqorrobin</string>
    <string name="universitas_gunadarma">UNIVERSITAS GUNADARMA</string>
    <string name="jurusan">Jurusan</string>
    <string name="npm">NPM</string>
    <string name="nama">Nama</string>
    <string name="help">Help</string>
    <string name="string_login">login</string>
    <string name="lab">LABORATORIUM</string>
    <string name="labsi">SISTEM INFORMASI</string>
    <string name="developert">Developer</string>
    <string name="biodata">Biodata</string>
    <string name="textview">TextView</string>
    <string name="noa">1.</string>
    <string name="nob">2.</string>
    <string name="noc">3.</string>
    <string name="nod">4.</string>
    <string name="noe">5.</string>
    <string name="nof">6.</string>
    <string name="nog">7.</string>
    <string name="noh">8.</string>
    <string name="noi">9.</string>
    <string name="noj">10.</string>
    <string name="nok">11.</string>
    <string name="nol">12.</string>
    <string name="nom">13.</string>
    <string name="ppa">Bersedia dikeluarkan apabila tidak membawa laporan akhir, laporan pendahulan, dan kartu praktikum.</string>
    <string name="ppb">Bersedia didelete apabila tidak hadir melebihi batas maksimal abses dengan alasan apapun.</string>
    <string name="ppc">Bersedia dinyatakan alfa apabila foto tidak ditempel pada minggu kedua.</string>
    <string name="ppd">Apabila terlambat lebih dari 5 menit bersedia dikeluarkan dari Laboratorium Sistem Informasi.</string>
    <string name="ppe">Bersedia dikeluarkan apabila pakaian tidak sesuai dengan aturan Laboratorium Sistem Informasi, Khusus untuk pria segala bentuk aksesoris seperti gelang, cincin, kalung dan anting dilepas sebelum masuk ke dalam ruang lab.</string>
    <string name="ppf">Bersedia dikeluarkan apabila selama praktikum berlangsung tidak mengikuti arahan dari asisten.</string>
    <string name="ppg">Bersedia dikeluarkan apabila bertransaksi didalam ruang Laboratorium Sistem Informasi(Titip LP atau LA).</string>
    <string name="pph">Apabila menggunakan alat komunikasi saat ujian berlangsung asisten berhak menyita dan dapat diambil kembali oleh orang tua.</string>
    <string name="ppi">Jika ada praktikan sakit harus dengan keterangan dokter, ijin dengan alasan ijin yang jelas dengan melampirkan bukti ijin yang dititipkan kepada teman sekelas, selain itu dianggap alfa.</string>
    <string name="ppj">Jika terjadi kehilangan kartu praktikum maka saya mengurus kartu pengganti sebelum paraktikum dimulai (30 menit atau hari sebelum praktikum). Apabila mengurus pada saat shift praktikum berlangsung dianggap alfa.</string>
    <string name="ppk">Membawa surat keterangan jika akan melakukan pindah jadwal praktikum.</string>
    <string name="ppl">Tidak memakai sandal  atau sejenisnya kedalam ruangan Laboratorium Sistem Informasi.</string>
    <string name="ppm">Jika  tidak hadir(alfa/sakit/ijin) diwajibkan membawa laporan minggu saat tidak hadir dan bersedia dianggap alfa jika tidak membawa.</string>
    <string name="bulan">Bulan</string>
    <string name="buttonrekap">Rekap</string>
    <string name="hari">Hari</string>
    <string name="jabatan">Jabatan</string>
    <string name="kelas">Kelas</string>
    <string name="penanggung_jawab">Penanggung Jawab</string>
    <string name="rekapv">Rekap</string>
    <string name="shift">Shift</string>
    <string name="tahun">Tahun</string>
    <string name="kelas_administrasi">kelas Administrasi</string>
    <string name="kondisi">kondisi</string>
    <string name="namahari">Hari</string>
    <string name="komplain_nilai_praktikum">Komplain Nilai Praktikum</string>
    <string name="praktikum_gabungan">Praktikum Gabungan</string>
    <string name="laporan_praktikum">Laporan Praktikum</string>
    <string name="jadwal_praktikum">Jadwal Praktikum</string>
    <string name="pindah_jadwal">Pindah Jadwal</string>
    <string name="pengisian_blanko">Pengisian Blanko</string>
    <string name="peraturan_asisten">Peraturan Asisten</string>
    <string name="hal_hal_yang_harus_diperhatikan_dalam_pengisian_blanko">Hal-hal yang harus diperhatikan dalam pengisian blanko :</string>
    <string name="blanko_pengulangan_praktikum_labsi_diberikan_kepada_praktikan_yang_alfa_kurang_dari_batas_maksimal_1x_untuk_4_pertemuan_dan_tidak_di_delete_sebelum_minggu_ujian">Blanko Pengulangan Praktikum LABSI diberikan kepada Praktikan yang Alfa kurang dari batas maksimal (1x untuk 4 pertemuan) dan tidak di delete sebelum Minggu ujian.</string>
    <string name="a">a.</string>
    <string name="blanko_dapat_diperpanjang_maksimal_1_hari_kerja_hari_ujian">Blanko dapat diperpanjang maksimal 1 hari kerja (hari ujian)</string>
    <string name="jumlah_maksimal_mahasiswa_yang_tercantum_dalam_satu_blanko_adalah_5">Jumlah maksimal mahasiswa yang tercantum dalam satu blanko adalah 5</string>
    <string name="nomor_blanko">Nomor Blanko</string>
    <string name="pemberian_label_praktikum_dan_inisial_ketua_asisten">Pemberian Label Praktikum dan Inisial Ketua Asisten</string>
    <string name="pengisian_blanko_dilakukan_oleh_ketua_asisten_pada_minggu_ke_3_sedangkan_untuk_perpanjang_masa_berlaku_blanko_boleh_dilakukan_oleh_pj_shift_atau_ketu_pada_minggu_ujian">Pengisian Blanko dilakukan oleh ketua Asisten pada Minggu ke 3, sedangkan untuk perpanjang masa berlaku blanko boleh dilakukan oleh PJ Shift atau ketu pada Minggu Ujian.</string>
    <string name="tanggal_pemberian_blanko">Tanggal Pemberian Blanko</string>
    <string name="tanggal_penerimaan_blanko">Tanggal Penerimaan Blanko</string>
    <string name="b">b.</string>
    <string name="c">c.</string>
    <string name="d">d.</string>
    <string name="e">e.</string>
    <string name="f">f.</string>
    <string name="form_pindah_jadwal_yang_telah_diisi_di_copy_sebanyak_2_rangkap_oleh_praktikan">Form pindah jadwal yang telah diisi, di Copy sebanyak 2 rangkap oleh praktikan</string>
    <string name="bagi_praktikan_yang_mengajukan_pindah_jadwal_harap_memberikan_surat_permohonan_atau_bukti_lainnya_yang_disimpan_oleh_pihak_labsi_di_tempat_yang_telah_disediakaan">Bagi Praktikan yang mengajukan Pindah jadwal harap memberikan surat permohonan atau bukti lainnya yang disimpan oleh pihak LABSI di tempat yang telah disediakaan</string>
    <string name="form_pindah_jadwal_diisi_oleh_ketua_asisten_atau_pj_shift_yang_sedang_bertugas">Form Pindah Jadwal diisi oleh ketua asisten atau PJ Shift yang sedang bertugas</string>
    <string name="pindah_jadwal_dilakukan_selambat_lambatnya_h_1_sebelum_praktikum_kelas_praktikum_dimulai">Pindah Jadwal dilakukan selambat-lambatnya H-1 sebelum praktikum kelas praktikum dimulai</string>
    <string name="login_dengan">Login dengan menggunakan \n User : NPM \n Pass : NPM</string>
    <string name="melakukan_validasi_daftar_praktikum_di_kampus_e_ruang_e431_kelapa_dua_depok_atau_kampus_j1_ruang_j1520_kalimalang_validasi_hanya_dapat_dilakukan_sendiri_oleh_praktikan_bersangkutan_dengan_menunjukkan_kartu_validasi_dan_krs_aktif_yang_telah_di_tempel_foto_dan_diberi_stempel">Melakukan Validasi daftar praktikum di kampus E ruang E431 (Kelapa Dua Depok) atau kampus J1 ruang J1520 (Kalimalang). Validasi hanya dapat dilakukan sendiri oleh praktikan bersangkutan dengan menunjukkan kartu validasi dan KRS aktif yang telah di tempel foto dan diberi stempel.</string>
    <string name="praktikan_melakukan">Praktikan melakukan pendaftaran dengan web Gabungan Online \'http://www.virtual.pslabsi.org\', pendaftaran dilakukan per matakuliah yang diambil. Setelah melakukan pendaftaran diwajibkan untuk mencetak kartu validasi sebagai bukti pendaftaran.</string>
    <string name="kuy">kuy</string>
    <string name="laporan_pendahuluan_praktikum">Laporan Pendahuluan Praktikum</string>
    <string name="kerjakan_dengan_editor_text_kemudian_di_cetak">Kerjakan dengan editor text kemudian di cetak</string>
    <string name="tuliskanlah_soal_yang_diberikan_oleh_tutor">Tuliskanlah soal yang diberikan oleh Tutor</string>
    <string name="sertakan_logika_penalaran_dari_listing_program_yang_tertera">Sertakan logika / penalaran dari listing program yang tertera</string>
    <string name="laporan_akhir_praktikum">Laporan Akhir Praktikum</string>
    <string name="kerjakan_dengan_mesin_tik_manual">kerjakan dengan mesin tik Manual</string>
    <string name="daftar_pegawai">Daftar Pegawai</string>
    <string name="gajih">Gajih</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="posisi">Posisi</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="hapus_pegawai">Hapus Pegawai</string>
    <string name="id_pegawai">ID Pegawai</string>
    <string name="salary">Salary</string>
    <string name="update_pegawai">Update Pegawai</string>
    <string name="button">batal</string>

    <string name="title_activity_nointernet">nointernet</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="kembali">Kembali</string>
    <string name="tidak_ada_internet_n_server_tidak_string_tidak_ada_internet_server_tidak_menanggapi">Tidak terhubung ke internet / Server tidak menanggapi</string>
    <string name="titikdua">:</string>
    <string name="peraturan_praktikum">Peraturan Praktikum</string>
    <string name="inpur_rekap">inpur Rekap</string>
</resources>
