<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/peraturan_praktikum"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView107"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/noa" />

                <TextView
                    android:id="@+id/textView104"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppa" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView109"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/nob" />

                <TextView
                    android:id="@+id/textView108"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppb" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView111"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:text="@string/noc" />

            <TextView
                android:id="@+id/textView110"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppc" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/nod" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppd" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/noe" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppe" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/nof" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppf" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/nog" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppg" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/noh" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pph" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/noi" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppi" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/noj" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppj" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/nok" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppk" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/nol" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppl" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/nom" />

                <TextView
                    android:id="@+id/textView110"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppm" />
            </TableRow>
        </LinearLayout>
    </ScrollView>
</LinearLayout>



